<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tweet.TweetDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/title_aspiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/title_aspiration"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/content_title_aspiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/see_clear"
                android:textColor="@color/light_grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_aspiration" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_aspiration"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/light_blue"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content_title_aspiration"
                app:strokeColor="@color/blue_500"
                app:strokeWidth="2dp"
                tools:ignore="MissingConstraints">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/content_tweet_aspiration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="25dp"
                            android:layout_marginBottom="0dp"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="start"
                            android:text="@string/tweet_content"
                            android:textColor="@color/blue_500"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </RelativeLayout>
                </ScrollView>

            </com.google.android.material.card.MaterialCardView>

            <RadioGroup
                android:id="@+id/toggleButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_aspiration"
                app:singleSelection="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTitle"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button_left"
                    android:drawableEnd="@drawable/toa_vector"
                    android:paddingRight="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/aspiration_score"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnScore"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button_right"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/score"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/blue_500"
                    android:textSize="14sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/title_user_tweet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/title_user_tweet"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggleButtonGroup" />

            <TextView
                android:id="@+id/content_title_user_tweet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/see_original"
                android:textColor="@color/light_grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_user_tweet" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_user"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/light_blue"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content_title_user_tweet"
                app:strokeColor="@color/blue_500"
                app:strokeWidth="2dp"
                tools:ignore="MissingConstraints">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/username_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="25dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/username"
                        android:textColor="@color/blue_500"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/username_title">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/content_tweet_user"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="25dp"
                                android:layout_marginBottom="25dp"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="start"
                                android:text="@string/tweet_content_real"
                                android:textColor="@color/blue_500"
                                android:textSize="14sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />
                        </RelativeLayout>
                    </ScrollView>

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

            <RadioGroup
                android:id="@+id/toggleButtonGroupLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:singleSelection="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTitleLike"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button_left"
                    android:drawableRight="@drawable/like_vector"
                    android:paddingRight="60dp"
                    android:paddingLeft="50dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/like"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnScoreLike"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button_right"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/score"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/blue_500"
                    android:textSize="14sp" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/toggleButtonGroupReply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:singleSelection="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTitleReply"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button_left"
                    android:drawableEnd="@drawable/reply_vector"
                    android:paddingRight="55dp"
                    android:paddingLeft="45dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/reply"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnScoreReply"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button_right"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/score"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/blue_500"
                    android:textSize="14sp" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/replyTweetButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner_button"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/reply_tweets"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggleButtonGroupReply" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/round_corner_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:itemIconTint="@color/icon_color"
        app:itemTextColor="@color/icon_color"
        app:menu="@menu/menu_main"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/custom_progressbar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>