<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tweet.TopicDetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="180sp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/toggleButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:singleSelection="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTitle"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button_left"
                    android:drawableEnd="@drawable/toa_vector"
                    android:paddingRight="20dp"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:text="@string/total_aspiration"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textAllCaps="false"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnScore"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/blue_500"
                    android:background="@drawable/rounded_corner_button_right"
                    android:textAllCaps="false"
                    android:text="@string/score"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/title_aspiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/title_aspiration_s"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup" />

            <TextView
                android:id="@+id/content_title_aspiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/click_for_detail"
                android:textColor="@color/light_grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_aspiration" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content_title_aspiration" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/moreTweetButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner_button"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/more_tweets"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_detail"/>
        </LinearLayout>
    </ScrollView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/custom_progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/round_corner_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:itemIconTint="@color/icon_color"
        app:itemTextColor="@color/icon_color"
        app:menu="@menu/menu_main"/>

</androidx.constraintlayout.widget.ConstraintLayout>